Number slider precision handling inconsistent between unit systems #45739

Closed
opened 2015-08-09 17:56:55 +02:00 by Thomas Radeke · 6 comments

When sliding a float input, the step sizes are inconsistent between unit systems. This affects all current and past releases.

Example:

  • With Blender units, sliding any float number input results in 0.01 steps (0.001 with Shift)
  • With metric units, the step size increases 100 times - 1.0 per step, 0.1 with Shift.

This inconsistency makes the sliding function of float inputs almost useless when working with metric or imperial units.

Proposed fix:
In source/blender/editors/interface/interface.c, line 2076:

return (float)(step / ui_get_but_scale_unit(but, 1.0)) * 100.0f;

When the 100.0f factor is removed or set to 1.0f, the inconsistency is fixed.

Another proposal: make that factor configurable through User Preferences. This way you can preserve the old behaviour and still enable custom precision handling for those that need it.

When sliding a float input, the step sizes are inconsistent between unit systems. This affects all current and past releases. Example: - With Blender units, sliding any float number input results in 0.01 steps (0.001 with Shift) - With metric units, the step size increases 100 times - 1.0 per step, 0.1 with Shift. This inconsistency makes the sliding function of float inputs almost useless when working with metric or imperial units. Proposed fix: In source/blender/editors/interface/interface.c, line 2076: ``` return (float)(step / ui_get_but_scale_unit(but, 1.0)) * 100.0f; ``` When the 100.0f factor is removed or set to 1.0f, the inconsistency is fixed. Another proposal: make that factor configurable through User Preferences. This way you can preserve the old behaviour and still enable custom precision handling for those that need it.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ThomasRadeke

Added subscriber: @ThomasRadeke
Author

This seems to be the same as #45572.

This seems to be the same as #45572.

Closed as duplicate of #45572

Closed as duplicate of #45572

This issue was referenced by 883b420a51

This issue was referenced by 883b420a5156fe616488f975a6817fde4cab0352

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45739
No description provided.